# MyProjects

./: README.md
3D Multiview Modeler/: Camera.cpp  Camera.h  Drawing.cpp  Drawing.h  Keyboard.cpp  Keyboard.h  Mesh3D.h  Mouse.cpp  Mouse.h  PopUpMenu.cpp  PopUpMenu.h  README  Rendering.cpp  Rendering.h  Vec2.h  Vec3.h  Window.cpp  Window.h  main.cpp  makefile
C++/Projet - Simulateur d'océan/: CMakeLists.txt  README.txt
C++/Projet - Simulateur d'océan/data/: l0.txt  test.txt  testfft1.txt
C++/Projet - Simulateur d'océan/data/gerstner/: data0.txt  data1.txt  data10.txt  data11.txt  data12.txt  data13.txt  data14.txt  data15.txt  data16.txt  data17.txt  data18.txt  data19.txt  data2.txt  data20.txt  data21.txt  data22.txt  data23.txt  data24.txt  data25.txt  data26.txt  data27.txt  data28.txt  data29.txt  data3.txt  data30.txt  data31.txt  data32.txt  data33.txt  data34.txt  data35.txt  data36.txt  data37.txt  data38.txt  data39.txt  data4.txt  data40.txt  data41.txt  data42.txt  data43.txt  data44.txt  (+10 more)
C++/Projet - Simulateur d'océan/src/: Dvector.cpp  GenericVector.h  GerstnerWave.h  GerstnerWaveModel.cpp  GerstnerWaveModel.h  Height.cpp  Height.h  Ocean.cpp  Ocean.h  PhilipsWaveModel.cpp  PhilipsWaveModel.h  WaveModel.cpp  WaveModel.h  fft.cpp  fft.h  main.cpp  philips.cpp
C++/TP/TP3_bordasj_ladrecha/: CMakeLists.txt
C++/TP/TP3_bordasj_ladrecha/src/: Dvector.cpp  Dvector.h  GerstnerWave.cpp  GerstnerWave.h  GerstnerWaveModel.cpp  GerstnerWaveModel.h  Height.cpp  Height.h  WaveModel.cpp  WaveModel.h  main.cpp
Modélisation géométrique/: courbure.m  eval_DC.m  (+1 more)
(+180 files in other folders)
